group 'com.nexthoughts'
version '1.0-SNAPSHOT'

apply plugin: 'java'
apply plugin: 'war'
apply plugin: 'org.akhikhl.gretty'

sourceCompatibility = 1.7
targetCompatibility = 1.7

repositories {
    mavenCentral()
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.11'
    compile 'ch.qos.logback:logback-classic:1.1.3'
    //Add Spring Dependencies
    compile 'org.springframework:spring-webmvc:4.3.4.RELEASE'
    compile 'org.springframework.boot:spring-boot-starter-data-jpa:1.1.4.RELEASE'
    //Add Servlet Dependencies
    providedCompile("javax.servlet:servlet-api:2.5")  //include in compile only, exclude in the war
    compile 'javax.servlet:jstl:1.2'
    //Add Database dependencies
    compile 'mysql:mysql-connector-java:5.1.29'

    //Add hibernate dependencies
    compile 'org.hibernate:hibernate-core:4.3.6.Final'
    compile 'commons-dbcp:commons-dbcp:1.4'

    //TheamLeaf
    compile 'org.thymeleaf:thymeleaf:3.0.3.RELEASE'
    compile 'org.thymeleaf:thymeleaf-spring4:3.0.3.RELEASE'

}

war {
    archiveName 'ROOT.war'
}

buildscript {
    repositories {
        jcenter()
    }

    dependencies {
        //Gretty Embedded Jetty
        classpath 'org.akhikhl.gretty:gretty:+'
    }
}

gretty {
    jvmArgs = [
            '-XX:MaxPermSize=256m',
            '-Xms512m',
            '-Xmx1024m']
    port = 8888
    scanInterval = 1
    fastReload = true
    recompileOnSourceChange = true
    reloadOnClassChange = true
    reloadOnLibChange = true
    contextPath = '/'
    servletContainer = 'jetty9' //tomcat7 or tomcat8
}